[tool.poetry]
name = "fmind-lab"
version = "1.0.0"
authors = ["Médéric HURIER <fmind@fmind.me>"]
description = "Docker image for data science lab."
keywords = ["docker", "science", "jupyter", "tensorflow", "lab"]
homepage = "https://github.com/fmind/lab"
license = "LGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
autokeras = ">=1.0"
catboost = ">=0.26"
cython = ">=0.29"
dash = ">=1.21"
dask = {version = ">=2021.8.1", extras = ["complete"]}
feast = ">=0.12"
graphviz = ">=0.17"
kaggle = ">=1.5"
networkx = ">=2.6"
numpy = ">=1.19"
optuna = ">=2.9"
pandas = ">=1.1"
pandas-profiling = {version = ">=3.0.0", extras = ["notebook"]}
plotly = ">=5.2"
pycaret = ">=2.2"
python = ">=3.8,<3.9"
scikit-learn = ">=0.24"
shap = ">=0.39"
spacy = ">=3.1"
statsmodels = ">=0.12"
tensorboard = ">=2.6"
tensorflow = ">=2.5"
tensorflow-datasets = ">=4.4"
tensorflow-hub = ">=0.12"
tfx = ">=1.2"
tqdm = ">=4.62"
xgboost = ">=1.4"

[tool.poetry.dev-dependencies]
black = ">=21.7b0"
coverage = ">=5.5"
dask-labextension = ">=5.1"
elyra = ">=3.0"
glances = ">=3.2"
invoke = ">=1.6"
ipytest = ">=0.11"
ipywidgets = ">=7.6"
isort = ">=5.9"
jupyter-dash = ">=0.4"
jupyter-resource-usage = ">=0.6"
jupyter-server-proxy = ">=3.1"
jupyter-to-medium = ">=0.2"
jupyterlab = ">=3.1"
jupyterlab-code-formatter = ">=1.4"
jupyterlab-drawio = ">=0.9"
jupyterlab-quickopen = ">=1.1"
jupyterlab-spellchecker = ">=0.7"
jupytext = ">=1.11"
mypy = ">=0.910"
nbconvert = ">=6.1"
nbdime = ">=3.1"
nbformat = ">=5.1"
papermill = ">=2.3"
pylint = ">=2.10"
pytest = ">=6.2"
rise = ">=5.7"
voila = ">=0.2"
witwidget = ">=1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
